# research-agent

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  env.example  langgraph.json  pyproject.toml
docs/: agent_tools.md  background-run-snapshot-recovery.md  deployment-network-troubleshooting.md  streaming-stability-optimization.md  test_content_reader.md
frontend/: next.config.js
frontend/app/: layout.tsx
frontend/components/chat/: InputArea.tsx  MessageBubble.tsx  MessageList.tsx
frontend/components/sidebar/: ConversationList.tsx
frontend/hooks/: index.ts  useChat.ts  useWebSocket.ts
scripts/: inspect_mcp_prompt.py  print_deep_research_graph.py
src/: __init__.py  main.py
src/agent/: __init__.py  research_agent.py  server.py
src/agent/subagents/: __init__.py  content_reader_agent.py
src/api/: __init__.py  main.py
src/api/auth/: __init__.py  clerk_auth.py
src/api/routes/: __init__.py  (+4 more)
src/config/: __init__.py  deep_research_config.py  llm_config.py  llm_factory.py  mcp_config.py  reader_config.py  settings.py
src/deep_research/: README.md  __init__.py  config.py  deep_research_agent.py  graph.py  server.py  state.py  structured_outputs.py
src/prompts/: __init__.py  loader.py
src/tools/: __init__.py  arxiv_adapter.py  arxiv_api.py  bocha_search.py  github_search.py  hacker_news.py  hf_blog.py  hf_daily_papers.py  jina_reader.py  rss_feeds.py  tavily_search.py  zyte_reader.py
src/ui/: components.tsx  styles.css
src/utils/: __init__.py  logging_config.py  stream_display.py
tests/: test_agent_service_background_runs.py  test_agent_service_keepalive.py  test_arxiv_api.py  test_arxiv_mcp.py  test_chat_sse.py  test_clerk_auth.py  test_content_reader.py  test_deep_research_runtime_config.py  test_feed_digest.py  test_feeds_route_security.py  test_hacker_news.py  test_hn_mcp.py  test_jina_reader.py  test_rss_feeds.py
tests/integration/: test_bocha_search.py  test_content_reader.py  test_github_search.py  test_hacker_news_api.py  test_hf_daily_papers.py  test_hf_monthly_papers.py  test_jina_reader.py  test_zyte_reader.py
web-ui/: .env.local.example  middleware.ts  next.config.js  package.json  tailwind.config.ts  vitest.config.ts
web-ui/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
web-ui/hooks/: index.ts  useChat.test.ts  useChat.ts  useWebSocket.ts
web-ui/lib/: api.ts  stream.ts  types.ts  utils.ts
(+72 files in other folders)
