[project]
name = "research-agent"
version = "0.1.0"
description = "A deep research agent using DeepAgents with MCP tools integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "httpx[socks]>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "tavily-python>=0.5.0",
    "feedparser>=6.0.0",
    # Web API dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "grandalf>=0.8.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "grandalf>=0.8.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

